--- a/explore.html
+++ b/explore.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="assets/css/popular.css">
 
 
-    <title>Responsive travel website - Bedimcode</title>
+    <title>Explore</title>
 </head>
 
 <body>
@@ -63,21 +63,21 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home section" id="home">
-             <img src="assets/img/india/kanyakumari2.png" alt="home image" class="home__bg">
+             <img src="assets/img/india/" alt="home image" class="home__bg">
         <div class="home__shadow"></div>
             <div class="home__container container grid">
                 <div class="home__data">
 
                     <h1 class="home__title">
-                        Enjoy The Beauty <br>
-                        Of The India
+                        Let Travel the India <br>
+                        With us
                     </h1>
                 </div>
             </div>
         </section>
 
         <!--==================== ABOUT ====================-->
-
+    
 
         
 
@@ -202,7 +202,7 @@
     <script src="assets/js/scrollreveal.min.js"></script>
 
     <!--=============== MAIN JS ===============-->
-    <script src="assets/js/popular.js"></script>
+    <script src="assets/js/explore.js"></script>
 </body>
 
 </html>
