--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                </li>
 
                <li class="nav__item">
-                  <a href="#explore" class="nav__link">Explore</a>
+                  <a href="explore.html" class="nav__link">Explore</a>
                </li>
 
             </ul>
@@ -79,15 +79,15 @@
                   paradises, islands, mountains and much
                   more, get your trip now.
                </p>
-               <a href="#" class="button">
+               <a href="#" class="button" style="border-radius: 7px;">
                   Start Your Journey<i class="ri-arrow-right-line"></i>
                </a>
 
             </div>
             <div class="home__cards grid">
                <article class="home__card">
-                  <img src="assets/img/india/tajmahal.jpg" alt="home image" class="home__card-img">
-                  <h3 class="home__card-title">Tajmahal</h3>
+                  <img src="assets/img/india/tajmahal.jpg"   alt="home image" class="home__card-img">
+                  <h3 class="home__card-title" >Tajmahal</h3>
                   <div class="home__card-shadow"></div>
                </article>
 
@@ -158,7 +158,7 @@
                <img src="assets/img/india/goabeach.jpg" alt="about image" class="about__img">
                <div class="about__shadow"></div>
             </div>
-            <a href="#" class="button">
+            <a href="#" class="button" style="border-radius: 7px;">
                Explore Travel<i class="ri-arrow-right-line"></i>
             </a>
 
