--- a/explore.html
+++ b/explore.html
@@ -2,88 +2,101 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--=============== FAVICON ===============-->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+   <!--=============== FAVICON ===============-->
+   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
-    <!--=============== REMIXICONS ===============-->
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
+   <!--=============== REMIXICONS ===============-->
+   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
-    <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="assets/css/popular.css">
+   <!--=============== CSS ===============-->
+   <link rel="stylesheet" href="assets/css/popular.css">
+   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
 
 
-    <title>Explore</title>
+   <title>Explore</title>
 </head>
 
 <body>
-    <!--==================== HEADER ====================-->
-    <header class="header" id="header">
-        <nav class="nav container">
-            <a href="#" class="nav__logo">
-                Travel
-            </a>
-            <div class="nav__menu" id="nav-menu">
-                <ul class="nav__list">
-                    <li class="nav__item">
-                        <a href="index.html" class="nav__link ">Home</a>
-                    </li>
+   <!--==================== HEADER ====================-->
+   <header class="header" id="header">
+      <nav class="nav container">
+         <a href="#" class="nav__logo">
+            Travel
+         </a>
+         <div class="nav__menu" id="nav-menu">
+            <ul class="nav__list">
+               <li class="nav__item">
+                  <a href="index.html" class="nav__link ">Home</a>
+               </li>
 
-                    <li class="nav__item">
-                        <a href="#about" class="nav__link">About</a>
-                    </li>
+               <li class="nav__item">
+                  <a href="#about" class="nav__link">About</a>
+               </li>
 
-                    <li class="nav__item">
-                        <a href="#popular" class="nav__link">Popular</a>
-                    </li>
+               <li class="nav__item">
+                  <a href="popular.html" class="nav__link">Popular</a>
+               </li>
 
-                    <li class="nav__item">
-                        <a href="#explore" class="nav__link">Explore</a>
-                    </li>
+               <li class="nav__item">
+                  <a href="#explore" class="nav__link">Explore</a>
+               </li>
 
-                </ul>
+            </ul>
 
-                <!-- Close button -->
-                <div class="nav__close" id="nav-close">
-                    <i class="ri-close-line"></i>
-                </div>
+            <!-- Close button -->
+            <div class="nav__close" id="nav-close">
+               <i class="ri-close-line"></i>
             </div>
+         </div>
 
-            <!-- Toggle button -->
-            <div class="nav__toggle" id="nav-toggle">
-                <i class="ri-menu-line"></i>
+         <!-- Toggle button -->
+         <div class="nav__toggle" id="nav-toggle">
+            <i class="ri-menu-line"></i>
+         </div>
+
+      </nav>
+   </header>
+
+   <!--==================== MAIN ====================-->
+   <main class="main">
+      <!--==================== HOME ====================-->
+      <section class="home section" id="home">
+         <img src="assets/img/india/himachal.png" alt="home image" class="home__bg">
+         <div class="home__shadow"></div>
+         <div class="home__container container grid">
+            <div class="home__data">
+
+               <h1 class="home__title">
+                  Let Travel the India <br>
+                  With us
+               </h1>
             </div>
+         </div>
+      </section>
 
-        </nav>
-    </header>
+      <!--==================== dropdown menu ====================-->
 
-    <!--==================== MAIN ====================-->
-    <main class="main">
-        <!--==================== HOME ====================-->
-        <section class="home section" id="home">
-             <img src="assets/img/india/" alt="home image" class="home__bg">
-        <div class="home__shadow"></div>
-            <div class="home__container container grid">
-                <div class="home__data">
+      <div class="container1">
+         <h3>select country state</h3>
+         <select class="form-select" aria-label="Default select example">
+            <option selected>Select Country</option>
+         </select>
+         <select class="form-select" aria-label="Default select example">
+            <option selected>Select State</option>
+         </select>
+         <select class="form-select" aria-label="Default select example">
+            <option selected>Select City</option>
+         </select>
+      </div>
 
-                    <h1 class="home__title">
-                        Let Travel the India <br>
-                        With us
-                    </h1>
-                </div>
-            </div>
-        </section>
 
-        <!--==================== ABOUT ====================-->
-    
-
-        
-
-    <!--==================== FOOTER ====================-->
-    <footer class="footer">
-        <div class="footer__container container grid">
+      <!--==================== FOOTER ====================-->
+      <footer class="footer">
+         <div class="footer__container container grid">
             <div class="footer__content grid">
                <div>
                   <a href="#" class="footer__logo">Travel</a>
@@ -96,85 +109,85 @@
                   <div>
                      <h3 class="footer__title">About</h3>
                      <ul class="footer__links">
-   
+
                         <li>
                            <a href="#" class="footer__link">About Us</a>
                         </li>
-   
+
                         <li>
                            <a href="#" class="footer__link">Features</a>
                         </li>
-   
+
                         <li>
                            <a href="#" class="footer__link">News & Blog</a>
                         </li>
-   
+
                      </ul>
                   </div>
-   
+
                   <div>
                      <h3 class="footer__title">Company</h3>
                      <ul class="footer__links">
-   
+
                         <li>
                            <a href="#" class="footer__link">FAQs</a>
                         </li>
-   
+
                         <li>
                            <a href="#" class="footer__link">History</a>
                         </li>
-   
+
                         <li>
                            <a href="#" class="footer__link">Testimonials</a>
                         </li>
-   
+
                      </ul>
                   </div>
-   
+
                   <div>
                      <h3 class="footer__title">Contact</h3>
                      <ul class="footer__links">
-   
+
                         <li>
                            <a href="#" class="footer__link">Call Center</a>
                         </li>
-   
+
                         <li>
                            <a href="#" class="footer__link">Support Center</a>
                         </li>
-   
+
                         <li>
                            <a href="#" class="footer__link">Contact Us</a>
                         </li>
-   
+
                      </ul>
                   </div>
-   
+
                   <div>
                      <h3 class="footer__title">Support</h3>
                      <ul class="footer__links">
-   
+
                         <li>
                            <a href="#" class="footer__link">Privacy Policy</a>
                         </li>
-   
+
                         <li>
                            <a href="#" class="footer__link">Terms & Services</a>
                         </li>
-   
+
                         <li>
                            <a href="#" class="footer__link">Payments</a>
                         </li>
-   
+
                      </ul>
                   </div>
-   
+
                </div>
             </div>
             <div class="footer__group">
                <div class="footer__social">
                   <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
-                     <i class="ri-facebook-line"></i>  
+                     <i class="ri-facebook-line"></i>
                   </a>
                   <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
                      <i class="ri-instagram-line"></i>
@@ -191,18 +204,21 @@
                </span>
             </div>
          </div>
-    </footer>
+      </footer>
 
-    <!--========== SCROLL UP ==========-->
+      <!--========== SCROLL UP ==========-->
 
-    <a href="#" class="scrollup" id="scroll-up">
-        <i class="ri-arrow-up-line"></i>
-     </a>
-    <!--=============== SCROLLREVEAL ===============-->
-    <script src="assets/js/scrollreveal.min.js"></script>
+      <a href="#" class="scrollup" id="scroll-up">
+         <i class="ri-arrow-up-line"></i>
+      </a>
+      <!--=============== SCROLLREVEAL ===============-->
+      <script src="assets/js/scrollreveal.min.js"></script>
 
-    <!--=============== MAIN JS ===============-->
-    <script src="assets/js/explore.js"></script>
+      <!--=============== MAIN JS ===============-->
+      <script src="assets/js/explore.js"></script>
+      <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+         crossorigin="anonymous"></script> -->
 </body>
 
 </html>
