--- a/popular.html
+++ b/popular.html
@@ -40,7 +40,7 @@
                     </li>
 
                     <li class="nav__item">
-                        <a href="#explore" class="nav__link">Explore</a>
+                        <a href="explore.html" class="nav__link">Explore</a>
                     </li>
 
                 </ul>
