--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
    <header class="header" id="header">
       <nav class="nav container">
          <a href="#" class="nav__logo">
-            Travel
+            
+            <!-- <img src="assets/img/logo.png" style="width: 110px; height: 50px; background-color: white; padding: 10px;" alt=""> -->
+             <!-- <img src="assets/img/logo1.png" alt="" style="width: 80px; height: 80px; border-radius: 50%;"> -->
+             <img src="assets/img/logo.svg" style="background-color: white;" height="10px" width="20px" class="logo">
+             The LandMark <br>
+            Tour
          </a>
          <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
