--- a/popular.html
+++ b/popular.html
@@ -23,7 +23,9 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
-                Travel
+                <img src="assets/img/logo.svg" style="background-color: white;" height="10px" width="20px" class="logo">
+             The LandMark <br>
+            Tour
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
