--- a/explore.html
+++ b/explore.html
@@ -12,7 +12,7 @@
    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
    <!--=============== CSS ===============-->
-   <link rel="stylesheet" href="assets/css/popular.css">
+   <link rel="stylesheet" href="assets/css/explore.css">
    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> -->
 
@@ -21,11 +21,14 @@
 </head>
 
 <body>
+   <main>
    <!--==================== HEADER ====================-->
    <header class="header" id="header">
       <nav class="nav container">
          <a href="#" class="nav__logo">
-            Travel
+            <img src="assets/img/logo.svg" style="background-color: white; height: 20px; width: 20px;"   class="logo">
+             The LandMark <br>
+            Tour
          </a>
          <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
@@ -63,162 +66,41 @@
 
    <!--==================== MAIN ====================-->
    <main class="main">
-      <!--==================== HOME ====================-->
-      <section class="home section" id="home">
-         <img src="assets/img/india/himachal.png" alt="home image" class="home__bg">
+      <section class="home section" id="home"></section>
+      <img src="assets/img/india/himachal.png" alt="home image" class="home__bg">
          <div class="home__shadow"></div>
          <div class="home__container container grid">
             <div class="home__data">
-
-               <h1 class="home__title">
-                  Let Travel the India <br>
-                  With us
-               </h1>
-            </div>
-         </div>
-      </section>
-
-      <!--==================== dropdown menu ====================-->
-
-      <div class="container1">
-         <h3>select country state</h3>
-         <select class="form-select" aria-label="Default select example">
-            <option selected>Select Country</option>
+               <h3 class="home__subtitle">
+                  Welcome To The Landmark Tour
+               </h3>
+      <!--==================== HOME ====================-->
+      <h1 class="home__title">
+         Explore<br>
+         The World
+      </h1>
+         <h3 style="font-size: 2rem;">Select Country State</h3>
+         <select class="form-select" aria-label="Default select example" style="padding: 2px;">
+            <option selected >Select Country</option>
          </select>
-         <select class="form-select" aria-label="Default select example">
+         <select class="form-select" aria-label="Default select example" style="padding: 2px;">
             <option selected>Select State</option>
          </select>
-         <select class="form-select" aria-label="Default select example">
+         <select class="form-select" aria-label="Default select example" style="padding: 2px; ">
             <option selected>Select City</option>
          </select>
+
+         <!-- <a href="#" class="button" style="border-radius: 7px;">
+            Explore Travel<i class="ri-arrow-right-line"></i>
+         </a> -->
+
+
       </div>
+      </main>
+   </section>
 
 
+=-->
+      
       <!--==================== FOOTER ====================-->
-      <footer class="footer">
-         <div class="footer__container container grid">
-            <div class="footer__content grid">
-               <div>
-                  <a href="#" class="footer__logo">Travel</a>
-                  <p class="footer__description">
-                     Travel with us and explore <br>
-                     the world without limits.
-                  </p>
-               </div>
-               <div class="footer__data grid">
-                  <div>
-                     <h3 class="footer__title">About</h3>
-                     <ul class="footer__links">
-
-                        <li>
-                           <a href="#" class="footer__link">About Us</a>
-                        </li>
-
-                        <li>
-                           <a href="#" class="footer__link">Features</a>
-                        </li>
-
-                        <li>
-                           <a href="#" class="footer__link">News & Blog</a>
-                        </li>
-
-                     </ul>
-                  </div>
-
-                  <div>
-                     <h3 class="footer__title">Company</h3>
-                     <ul class="footer__links">
-
-                        <li>
-                           <a href="#" class="footer__link">FAQs</a>
-                        </li>
-
-                        <li>
-                           <a href="#" class="footer__link">History</a>
-                        </li>
-
-                        <li>
-                           <a href="#" class="footer__link">Testimonials</a>
-                        </li>
-
-                     </ul>
-                  </div>
-
-                  <div>
-                     <h3 class="footer__title">Contact</h3>
-                     <ul class="footer__links">
-
-                        <li>
-                           <a href="#" class="footer__link">Call Center</a>
-                        </li>
-
-                        <li>
-                           <a href="#" class="footer__link">Support Center</a>
-                        </li>
-
-                        <li>
-                           <a href="#" class="footer__link">Contact Us</a>
-                        </li>
-
-                     </ul>
-                  </div>
-
-                  <div>
-                     <h3 class="footer__title">Support</h3>
-                     <ul class="footer__links">
-
-                        <li>
-                           <a href="#" class="footer__link">Privacy Policy</a>
-                        </li>
-
-                        <li>
-                           <a href="#" class="footer__link">Terms & Services</a>
-                        </li>
-
-                        <li>
-                           <a href="#" class="footer__link">Payments</a>
-                        </li>
-
-                     </ul>
-                  </div>
-
-               </div>
-            </div>
-            <div class="footer__group">
-               <div class="footer__social">
-                  <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
-                     <i class="ri-facebook-line"></i>
-                  </a>
-                  <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
-                     <i class="ri-instagram-line"></i>
-                  </a>
-                  <a href="https://twitter.com/" target="_blank" class="footer__social-link">
-                     <i class="ri-twitter-line"></i>
-                  </a>
-                  <a href="https://www.youtube.com/" target="_blank" class="footer__social-link">
-                     <i class="ri-youtube-line"></i>
-                  </a>
-               </div>
-               <span class="footer__copy">
-                  &#169; Copyright Bedimcode. All rights reserved
-               </span>
-            </div>
-         </div>
-      </footer>
-
-      <!--========== SCROLL UP ==========-->
-
-      <a href="#" class="scrollup" id="scroll-up">
-         <i class="ri-arrow-up-line"></i>
-      </a>
-      <!--=============== SCROLLREVEAL ===============-->
-      <script src="assets/js/scrollreveal.min.js"></script>
-
-      <!--=============== MAIN JS ===============-->
-      <script src="assets/js/explore.js"></script>
-      <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-         crossorigin="anonymous"></script> -->
-</body>
-
-</html>
+    
