--- a/explore.html
+++ b/explore.html
@@ -22,85 +22,109 @@
 
 <body>
    <main>
-   <!--==================== HEADER ====================-->
-   <header class="header" id="header">
-      <nav class="nav container">
-         <a href="#" class="nav__logo">
-            <img src="assets/img/logo.svg" style="background-color: white; height: 20px; width: 20px;"   class="logo">
-             The LandMark <br>
-            Tour
-         </a>
-         <div class="nav__menu" id="nav-menu">
-            <ul class="nav__list">
-               <li class="nav__item">
-                  <a href="index.html" class="nav__link ">Home</a>
-               </li>
+      <!--==================== HEADER ====================-->
+      <header class="header" id="header">
+         <nav class="nav container">
+            <a href="#" class="nav__logo">
+               <img src="assets/img/logo.svg" style="background-color: white;" height="10px" width="20px" class="logo">
+               The LandMark <br>
+               Tour
+            </a>
+            <div class="nav__menu" id="nav-menu">
+               <ul class="nav__list">
+                  <li class="nav__item">
+                     <a href="index.html" class="nav__link ">Home</a>
+                  </li>
 
-               <li class="nav__item">
-                  <a href="#about" class="nav__link">About</a>
-               </li>
+                  <li class="nav__item">
+                     <a href="#about" class="nav__link">About</a>
+                  </li>
 
-               <li class="nav__item">
-                  <a href="popular.html" class="nav__link">Popular</a>
-               </li>
+                  <li class="nav__item">
+                     <a href="popular.html" class="nav__link">Popular</a>
+                  </li>
 
-               <li class="nav__item">
-                  <a href="#explore" class="nav__link">Explore</a>
-               </li>
+                  <li class="nav__item">
+                     <a href="#explore" class="nav__link">Explore</a>
+                  </li>
 
-            </ul>
+               </ul>
 
-            <!-- Close button -->
-            <div class="nav__close" id="nav-close">
-               <i class="ri-close-line"></i>
+               <!-- Close button -->
+               <div class="nav__close" id="nav-close">
+                  <i class="ri-close-line"></i>
+               </div>
             </div>
-         </div>
 
-         <!-- Toggle button -->
-         <div class="nav__toggle" id="nav-toggle">
-            <i class="ri-menu-line"></i>
-         </div>
+            <!-- Toggle button -->
+            <div class="nav__toggle" id="nav-toggle">
+               <i class="ri-menu-line"></i>
+            </div>
 
-      </nav>
-   </header>
+         </nav>
+      </header>
 
-   <!--==================== MAIN ====================-->
-   <main class="main">
-      <section class="home section" id="home"></section>
-      <img src="assets/img/india/himachal.png" alt="home image" class="home__bg">
+      <!--==================== MAIN ====================-->
+      <main class="main">
+         <section class="home section" id="home"></section>
+         <img src="assets/img/india/himachal.png" alt="home image" class="home__bg">
          <div class="home__shadow"></div>
          <div class="home__container container grid">
             <div class="home__data">
                <h3 class="home__subtitle">
                   Welcome To The Landmark Tour
                </h3>
-      <!--==================== HOME ====================-->
-      <h1 class="home__title">
-         Explore<br>
-         The World
-      </h1>
-         <h3 style="font-size: 2rem;">Select Country State</h3>
-         <select class="form-select" aria-label="Default select example" style="padding: 2px;">
-            <option selected >Select Country</option>
-         </select>
-         <select class="form-select" aria-label="Default select example" style="padding: 2px;">
-            <option selected>Select State</option>
-         </select>
-         <select class="form-select" aria-label="Default select example" style="padding: 2px; ">
-            <option selected>Select City</option>
-         </select>
+               <!--==================== HOME ====================-->
+               <h1 class="home__title">
+                  Explore<br>
+                  The World
+               </h1>
+               <h3 style="font-size: 2rem;">Select Country State</h3>
+               <select class="form-select" aria-label="Default select example" style="padding: 2px;">
+                  <option selected>Select Country</option>
+               </select>
+               <select class="form-select" aria-label="Default select example" style="padding: 2px;">
+                  <option selected>Select State</option>
+               </select>
+               <select class="form-select" aria-label="Default select example" style="padding: 2px; ">
+                  <option selected>Select City</option>
+               </select>
 
-         <!-- <a href="#" class="button" style="border-radius: 7px;">
-            Explore Travel<i class="ri-arrow-right-line"></i>
-         </a> -->
+               <div class="time" style="margin-top: 30px;">
+                  <h2 style="font-size: 2rem;">Enter Your Journey Start and End Time</h2>
+                  <div class="time-inputs">
+                     <input type="text" style="margin-top: 20px;" placeholder="Journey Start time"
+                        onfocus="(this.type='time')">
+                     <input type="text" style="margin-top: 20px;" placeholder="Journey End time"
+                        onfocus="(this.type='time')">
+                  </div>
 
+               </div>
 
-      </div>
+            </div>
+         </div>
       </main>
-   </section>
+      </section>
 
 
-=-->
-      
+      =-->
+
       <!--==================== FOOTER ====================-->
-    
+
+
+      <!--========== SCROLL UP ==========-->
+
+      <a href="#" class="scrollup" id="scroll-up">
+         <i class="ri-arrow-up-line"></i>
+      </a>
+      <!--=============== SCROLLREVEAL ===============-->
+      <script src="assets/js/scrollreveal.min.js"></script>
+
+      <!--=============== MAIN JS ===============-->
+      <script src="assets/js/explore.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+         crossorigin="anonymous"></script>
+</body>
+
+</html>
