--- a/explore.html
+++ b/explore.html
@@ -67,7 +67,7 @@
       <!--==================== MAIN ====================-->
       <main class="main">
          <section class="home section" id="home"></section>
-         <img src="assets/img/india/himachal.png" alt="home image" class="home__bg">
+         <img src="assets/img/india/himachal1.jpg" alt="home image" class="home__bg">
          <div class="home__shadow"></div>
          <div class="home__container container grid">
             <div class="home__data">
@@ -75,18 +75,18 @@
                   Welcome To The Landmark Tour
                </h3>
                <!--==================== HOME ====================-->
-               <h1 class="home__title">
+               <h1 class="home__title" style="color: antiquewhite;">
                   Explore<br>
                   The World
                </h1>
                <h3 style="font-size: 2rem;">Select Country State</h3>
-               <select class="form-select" aria-label="Default select example" style="padding: 2px;">
+               <select class="form-select" aria-label="Default select example">
                   <option selected>Select Country</option>
                </select>
-               <select class="form-select" aria-label="Default select example" style="padding: 2px;">
+               <select class="form-select" aria-label="Default select example" >
                   <option selected>Select State</option>
                </select>
-               <select class="form-select" aria-label="Default select example" style="padding: 2px; ">
+               <select class="form-select" aria-label="Default select example" >
                   <option selected>Select City</option>
                </select>
 
@@ -98,9 +98,9 @@
                      <input type="text" style="margin-top: 20px;" placeholder="Journey End time"
                         onfocus="(this.type='time')">
                   </div>
-
+                 
                </div>
-
+               
             </div>
          </div>
       </main>
