--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                   paradises, islands, mountains and much
                   more, get your trip now.
                </p>
-               <a href="#" class="button" style="border-radius: 7px;">
+               <a href="explore.html" class="button" style="border-radius: 7px;">
                   Start Your Journey<i class="ri-arrow-right-line"></i>
                </a>
 
