--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                </li>
 
                <li class="nav__item">
-                  <a href="#about" class="nav__link">About</a>
+                  <a href="weather.html" class="nav__link">Weather</a>
                </li>
 
                <li class="nav__item">
