explore is added

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
    <!--=============== FAVICON ===============-->
-   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+   <link rel="shortcut icon" href="/travelpartner/assets/img/favicon.png" type="image/x-icon">
 
    <!--=============== REMIXICONS ===============-->
    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
    <!--=============== CSS ===============-->
-   <link rel="stylesheet" href="assets/css/styles.css">
+   <link rel="stylesheet" href="/travelpartner/assets/css/styles.css">
 
 
    <title>Responsive travel website - Bedimcode</title>
@@ -26,7 +26,7 @@
             
             <!-- <img src="assets/img/logo.png" style="width: 110px; height: 50px; background-color: white; padding: 10px;" alt=""> -->
              <!-- <img src="assets/img/logo1.png" alt="" style="width: 80px; height: 80px; border-radius: 50%;"> -->
-             <img src="assets/img/logo.svg" style="background-color: white;" height="10px" width="20px" class="logo">
+             <img src="/travelpartner/assets/img/logo.svg" style="background-color: white;" height="10px" width="20px" class="logo">
              The LandMark <br>
             Tour
          </a>
@@ -37,15 +37,15 @@
                </li>
 
                <li class="nav__item">
-                  <a href="weather.html" class="nav__link">Weather</a>
+                  <a href="/travelpartner/public/weather.html" class="nav__link">Weather</a>
                </li>
 
                <li class="nav__item">
-                  <a href="./popular.html" class="nav__link">Popular</a>
+                  <a href="/travelpartner/public/popular.html" class="nav__link">Popular</a>
                </li>
 
                <li class="nav__item">
-                  <a href="explore.html" class="nav__link">Explore</a>
+                  <a href="/travelpartner/public/explore.html" class="nav__link">Explore</a>
                </li>
 
             </ul>
@@ -68,12 +68,12 @@
    <main class="main">
       <!--==================== HOME ====================-->
       <section class="home section" id="home">
-         <img src="assets/img/india/keral.png" alt="home image" class="home__bg">
+         <img src="/travelpartner/assets/img/india/keral.png" alt="home image" class="home__bg">
          <div class="home__shadow"></div>
          <div class="home__container container grid">
             <div class="home__data">
                <h3 class="home__subtitle">
-                  Welcome To Travel
+                  Welcome To The Landmark Tour
                </h3>
                <h1 class="home__title">
                   Explore<br>
@@ -84,32 +84,32 @@
                   paradises, islands, mountains and much
                   more, get your trip now.
                </p>
-               <a href="explore.html" class="button" style="border-radius: 7px;">
+               <a href="/travelpartner/public/explore.html" class="button" style="border-radius: 7px;">
                   Start Your Journey<i class="ri-arrow-right-line"></i>
                </a>
 
             </div>
             <div class="home__cards grid">
                <article class="home__card">
-                  <img src="assets/img/india/tajmahal.jpg"   alt="home image" class="home__card-img">
+                  <img src="/travelpartner/assets/img/india/tajmahal.jpg"   alt="home image" class="home__card-img">
                   <h3 class="home__card-title" >Tajmahal</h3>
                   <div class="home__card-shadow"></div>
                </article>
 
                <article class="home__card">
-                  <img src="assets/img/india/mahalaxmi.png" alt="home image" class="home__card-img">
+                  <img src="/travelpartner/assets/img/india/mahalaxmi.png" alt="home image" class="home__card-img">
                   <h3 class="home__card-title">Mahalaxmi Mandir</h3>
                   <div class="home__card-shadow"></div>
                </article>
 
                <article class="home__card">
-                  <img src="assets/img/india/indiagate.jpg" alt="home image" class="home__card-img">
+                  <img src="/travelpartner/assets/img/india/indiagate.jpg" alt="home image" class="home__card-img">
                   <h3 class="home__card-title">India Gate</h3>
                   <div class="home__card-shadow"></div>
                </article>
 
                <article class="home__card">
-                  <img src="assets/img/india/redfort.jpg" alt="home image" class="home__card-img">
+                  <img src="/travelpartner/assets/img/india/redfort.jpg" alt="home image" class="home__card-img">
                   <h3 class="home__card-title">Red fort</h3>
                   <div class="home__card-shadow"></div>
                </article>
@@ -134,7 +134,7 @@
 
             </div>
             <div class="about__image">
-               <img src="assets/img/india/raigatfort.jpg" alt="about image" class="about__img">
+               <img src="/travelpartner/assets/img/india/raigatfort.jpg" alt="about image" class="about__img">
                <div class="about__shadow"></div>
             </div>
 
@@ -147,7 +147,7 @@
 
             </div>
             <div class="about__image">
-               <img src="assets/img/india/havamahal.jpg" alt="about image" class="about__img">
+               <img src="/travelpartner/assets/img/india/havamahal.jpg" alt="about image" class="about__img">
                <div class="about__shadow"></div>
             </div>
 
@@ -160,7 +160,7 @@
                
             </div>
             <div class="about__image">
-               <img src="assets/img/india/goabeach.jpg" alt="about image" class="about__img">
+               <img src="/travelpartner/assets/img/india/goabeach.jpg" alt="about image" class="about__img">
                <div class="about__shadow"></div>
             </div>
             <a href="#" class="button" style="border-radius: 7px;">
@@ -295,10 +295,10 @@
       <i class="ri-arrow-up-line"></i>
    </a>
    <!--=============== SCROLLREVEAL ===============-->
-   <script src="assets/js/scrollreveal.min.js"></script>
+   <script src="/travelpartner/assets/js/scrollreveal.min.js"></script>
 
    <!--=============== MAIN JS ===============-->
-   <script src="assets/js/main.js"></script>
+   <script src="/travelpartner/assets/js/main.js"></script>
 </body>
 
 </html>
