--- a/public/popular.html
+++ b/public/popular.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--=============== FAVICON ===============-->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/travelpartner/assets/img/favicon.png" type="image/x-icon">
 
     <!--=============== REMIXICONS ===============-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
 
     <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="assets/css/popular.css">
+    <link rel="stylesheet" href="/travelpartner/assets/css/popular.css">
 
 
     <title>Responsive travel website - Bedimcode</title>
@@ -23,26 +23,26 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
-                <img src="assets/img/logo.svg" style="background-color: white;" height="10px" width="20px" class="logo">
+                <img src="/travelpartner/assets/img/logo.svg" style="background-color: white;" height="10px" width="20px" class="logo">
              The LandMark <br>
             Tour
             </a>
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item">
-                        <a href="index.html" class="nav__link ">Home</a>
+                        <a href="/travelpartner/public/index.html" class="nav__link ">Home</a>
                     </li>
 
                     <li class="nav__item">
-                        <a href="weather.html" class="nav__link">Weather</a>
+                        <a href="/travelpartner/public/weather.html" class="nav__link">Weather</a>
                     </li>
 
                     <li class="nav__item">
-                        <a href="#popular" class="nav__link">Popular</a>
+                        <a href="/travelpartner/public/popular.html" class="nav__link">Popular</a>
                     </li>
 
                     <li class="nav__item">
-                        <a href="explore.html" class="nav__link">Explore</a>
+                        <a href="/travelpartner/public/explore.html" class="nav__link">Explore</a>
                     </li>
 
                 </ul>
@@ -65,7 +65,7 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home section" id="home">
-             <img src="assets/img/india/kanyakumari2.png" alt="home image" class="home__bg">
+             <img src="/travelpartner/assets/img/india/kanyakumari2.png" alt="home image" class="home__bg">
         <div class="home__shadow"></div>
             <div class="home__container container grid">
                 <div class="home__data">
@@ -86,7 +86,7 @@
             <div class="popular__container container grid">
                 <article class="popular__card">
                     <div class="popular__image">
-                        <img src="assets/img/india/dudhsagar.avif" alt="popular image" class="populer__image">
+                        <img src="/travelpartner/assets/img/india/dudhsagar.avif" alt="popular image" class="populer__image">
                         <div class="popular__shadow"></div>
                     </div>
                     <h2 class="popular__title">
@@ -102,7 +102,7 @@
 
                 <article class="popular__card">
                     <div class="popular__image">
-                        <img src="assets/img/india/2.jpg" alt="popular image" class="populer__image">
+                        <img src="/travelpartner/assets/img/india/2.jpg" alt="popular image" class="populer__image">
                         <div class="popular__shadow"></div>
                     </div>
                     <h2 class="popular__title">
@@ -118,7 +118,7 @@
 
                 <article class="popular__card">
                     <div class="popular__image">
-                        <img src="assets/img/india/3.jpg" alt="popular image" class="populer__image">
+                        <img src="/travelpartner/assets/img/india/3.jpg" alt="popular image" class="populer__image">
                         <div class="popular__shadow"></div>
                     </div>
                     <h2 class="popular__title">
