--- a/public/explore.html
+++ b/public/explore.html
@@ -99,7 +99,7 @@
                         <select id="city" name="city" disabled>
                            <option value="">Select City</option>
                         </select>
-                        <a href="#" class="button" style="border-radius: 7px;">
+                        <a href="/travelpartner/public/route.html" class="button" style="border-radius: 7px;">
                            Generate a map and calulate Cost<i class="ri-arrow-right-line"></i>
                         </a>
                         
