new things we are working on

--- a/public/explore.html
+++ b/public/explore.html
@@ -99,6 +99,12 @@
                         <select id="city" name="city" disabled>
                            <option value="">Select City</option>
                         </select>
+
+                        <div class="time">
+                           <input type="text" id="start" value="fdsfds" placeholder="Journey Starting Time" >
+                           <input type="text" id="end" value="gge" placeholder="Journey Ending Time" >
+                        </div>
+
                         <a href="/travelpartner/public/route.html" class="button" style="border-radius: 7px;">
                            Generate a map and calulate Cost<i class="ri-arrow-right-line"></i>
                         </a>
