--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
    <link rel="stylesheet" href="/travelpartner/assets/css/styles.css">
 
 
-   <title>Responsive travel website - Bedimcode</title>
+   <title>Travel With US</title>
 </head>
 
 <body>
@@ -163,7 +163,7 @@
                <img src="/travelpartner/assets/img/india/goabeach.jpg" alt="about image" class="about__img">
                <div class="about__shadow"></div>
             </div>
-            <a href="#" class="button" style="border-radius: 7px;">
+            <a href="/travelpartner/public/popular.html" class="button" style="border-radius: 7px;">
                Explore Travel<i class="ri-arrow-right-line"></i>
             </a>
 
