--- a/public/route.html
+++ b/public/route.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Direction With Multiple viaPoints">
 
     <script
-        src="https://apis.mappls.com/advancedmaps/api/3859d177098b08fbdf60477ae63b443b/map_sdk?layer=vector&v=3.0&callback=initMap1"></script>
+        src="https://apis.mappls.com/advancedmaps/api/79627e72edb6a97491f39bf6f2ff0292/map_sdk?layer=vector&v=3.0&callback=initMap1"></script>
     <script
-        src="https://apis.mappls.com/advancedmaps/api/86792d56-35e1-45c2-895d-bbbd92a5f2e6/map_sdk_plugins?v=3.0"></script>
+        src="https://apis.mappls.com/advancedmaps/api/772db1d9-18aa-47bf-8829-058b879fed58/map_sdk_plugins?v=3.0"></script>
     <style>
         body {
             margin: 0;
@@ -72,6 +72,14 @@
             });
         }
     </script> -->
+
+    <div style="margin-left: 104px;
+    margin-top: 35px;
+    background-color: #8bd78b;
+    width: 27%; ">
+        <h1 id="costEstimation" style="padding: 18px;
+    margin: 8px;"></h1>
+    </div>
     <script src="/travelpartner/assets/js/Map.js"></script>
     <!-- <script src="Nearby.js"></script> -->
 </body>
